--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,19 @@ button:hover {
   margin-top: 25px;
   border-radius: 10px;
 }
+/*footer*/
+.adjust-bar {
+  display: flex;
+  justify-content: space-between;
+  font-size: 20px;
+  align-items: center;
+}
+.adjust-bar > button {
+  width: 80px;
+  height: 60px;
+  font-size: 17px;
+}
+.encourage > span {
+  color: lightgoldenrodyellow;
+  text-shadow: -1.5px 1px 0px black;
+}
