--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,34 @@ button:hover {
   margin-top: 25px;
   border-radius: 10px;
 }
+/*style for checkbox*/
+input[type='checkbox'] {
+  appearance: none;
+  background-color: #fff;
+  margin: 0;
+  font: inherit;
+  color: currentColor;
+  width: 1.15em;
+  height: 1.15em;
+  border: 0.15em solid currentColor;
+  border-radius: 0.15em;
+  transform: translateY(0.075em);
+  place-content: center;
+}
+/*for unchecked state checkbox*/
+input[type='checkbox']::before {
+  content: '';
+  width: 0.65em;
+  height: 0.65em;
+  transform: scale(0);
+  transition: 120ms transform ease-in-out;
+  box-shadow: inset 1em 1em var(--form-control-color);
+}
+input[type='checkbox']:checked {
+  transform: scale(1);
+  transform-origin: bottom left;
+  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+}
 /*footer*/
 .adjust-bar {
   display: flex;
